force-app/main/default/objects/Capability__c/Capability__c.object-meta.xml
<CustomObject>
    <description>Governed Salesforce and industry capability taxonomy with four proficiency tiers.</description>
    <label>Capability</label>
    <nameField>
        <label>Capability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>