force-app/main/default/objects/Capability__c/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <label>Aliases</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>