force-app/main/default/objects/Capability__c/fields/Capability_ID__c.field-meta.xml
<CustomField>
    <fullName>Capability_ID__c</fullName>
    <externalId>true</externalId>
    <label>Capability ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>