force-app/main/default/objects/Capability__c/fields/Level_2_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Descriptor__c</fullName>
    <label>Intermediate Descriptor</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>