force-app/main/default/objects/Capability__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Salesforce Tower</label>
    <length>100</length>
    <type>Text</type>
</CustomField>