force-app/main/default/objects/Capability__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Capability Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Delivery Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>