force-app/main/default/objects/Capability__c/validationRules/Capability_Effective_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Capability_Effective_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Effective_To__c)), NOT(ISBLANK(Effective_From__c)), Effective_To__c &lt; Effective_From__c)</errorConditionFormula>
    <errorMessage>Effective To cannot precede Effective From.</errorMessage>
</ValidationRule>